--- a/TestNG/test-output/emailable-report.html
+++ b/TestNG/test-output/emailable-report.html
@@ -9,18 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Loan project</th></tr>
-<tr><td><a href="#t0">personal loan</a></td><td class="num">9</td><td class="num">0</td><td class="num">0</td><td class="num">77</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Regression</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">59</td><td>Smoke</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Loan project</th></tr></tbody><tbody id="t0"><tr><th colspan="4">personal loan &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">test.basics</td><td><a href="#m0">Demo</a></td><td rowspan="1">1534363293703</td><td rowspan="1">5</td></tr><tr class="passedeven"><td><a href="#m1">Demo1</a></td><td rowspan="1">1534363293711</td><td rowspan="1">3</td></tr><tr class="passedodd"><td rowspan="2">test.basics2</td><td><a href="#m2">day</a></td><td rowspan="1">1534363293725</td><td rowspan="1">2</td></tr><tr class="passedodd"><td><a href="#m3">day1</a></td><td rowspan="1">1534363293732</td><td rowspan="1">2</td></tr><tr class="passedeven"><td rowspan="5">test.login</td><td><a href="#m4">APIRest</a></td><td rowspan="1">1534363293736</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m5">MobileLogin</a></td><td rowspan="1">1534363293739</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m6">WebLoginhome</a></td><td rowspan="1">1534363293742</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m7">WebSigninhome</a></td><td rowspan="1">1534363293746</td><td rowspan="1">1</td></tr><tr class="passedeven"><td><a href="#m8">WebSignouthome</a></td><td rowspan="1">1534363293748</td><td rowspan="1">1</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Loan project</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Regression &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test.basics</td><td><a href="#m0">Demo</a></td><td rowspan="1">1534363841933</td><td rowspan="1">12</td></tr><tr class="passedodd"><td rowspan="1">test.basics2</td><td><a href="#m1">day1</a></td><td rowspan="1">1534363841950</td><td rowspan="1">1</td></tr><tr class="passedeven"><td rowspan="2">test.login</td><td><a href="#m2">MobileLogin</a></td><td rowspan="1">1534363841953</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m3">WebSigninhome</a></td><td rowspan="1">1534363841957</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>personal loan</h2><h3 id="m0">test.basics#Demo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">test.basics#Demo1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">test.basics2#day</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">test.basics2#day1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">test.login#APIRest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">test.login#MobileLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m6">test.login#WebLoginhome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m7">test.login#WebSigninhome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m8">test.login#WebSignouthome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Regression</h2><h3 id="m0">test.basics#Demo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">test.basics2#day1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">test.login#MobileLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">test.login#WebSigninhome</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
