--- a/TestNG/test-output/old/Loan project/classes.html
+++ b/TestNG/test-output/old/Loan project/classes.html
@@ -12,7 +12,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>Demo</td>
-<td>&nbsp;</td></tr>
+<td>Smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>Demo1</td>
@@ -21,30 +22,14 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>beforeclass</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>prerequisitebeforemethod</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>prerequisiteaftermethod</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>afterclass</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>test.login</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -58,11 +43,13 @@
 <tr>
 <td>&nbsp;</td>
 <td>WebSigninhome</td>
-<td>&nbsp;</td></tr>
+<td>Smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>MobileLogin</td>
-<td>&nbsp;</td></tr>
+<td>Smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>APIRest</td>
@@ -92,7 +79,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>day1</td>
-<td>&nbsp;</td></tr>
+<td>Smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>day</td>
