--- a/TestNG/test-output/old/Loan project/methods.html
+++ b/TestNG/test-output/old/Loan project/methods.html
@@ -1,44 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Loan project</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>0</td> <td title="&gt;&gt;login.prerequisitebeforesuite()[pri:0, instance:test.login@1604f19]">&gt;&gt;prerequisitebeforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>14</td> <td>&nbsp;</td><td title="&gt;&gt;basics.prerequisite()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;prerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>15</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@1604f19]">&gt;&gt;Webprerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.beforeclass()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;prerequisitebeforemethod</td> 
-<td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@23a2f9]">Demo</td> 
-  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>42</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;prerequisiteaftermethod</td> 
-<td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@23a2f9]">&gt;&gt;prerequisitebeforemethod</td> 
-<td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo1()[pri:0, instance:test.basics@23a2f9]">Demo1</td> 
-  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>47</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;prerequisiteaftermethod</td> 
-<td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>48</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.afterclass()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;afterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="96f0f5">  <td>18/08/15 17:01:33</td>   <td>57</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day()[pri:0, instance:test.basics2@c0edeb]">day</td> 
-  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="96f0f5">  <td>18/08/15 17:01:33</td>   <td>64</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day1()[pri:0, instance:test.basics2@c0edeb]">day1</td> 
-  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>68</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.APIRest()[pri:0, instance:test.login@1604f19]">APIRest</td> 
-  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>71</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.MobileLogin()[pri:0, instance:test.login@1604f19]">MobileLogin</td> 
-  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>74</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@1604f19]">WebLoginhome</td> 
-  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>78</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSigninhome()[pri:0, instance:test.login@1604f19]">WebSigninhome</td> 
-  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>80</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSignouthome()[pri:0, instance:test.login@1604f19]">WebSignouthome</td> 
-  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="749ee9">  <td>18/08/15 17:01:33</td>   <td>84</td> <td>&nbsp;</td><td title="&lt;&lt;basics.postrequisite()[pri:0, instance:test.basics@23a2f9]">&lt;&lt;postrequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
-<tr bgcolor="75a3bc">  <td>18/08/15 17:01:33</td>   <td>122</td> <td title="&lt;&lt;login.prerequisiteaftersuite()[pri:0, instance:test.login@1604f19]">&lt;&lt;prerequisiteaftersuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9335632</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>18/08/15 17:10:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@16905e]">Demo</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="6f6bfd">  <td>18/08/15 17:10:41</td>   <td>17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day1()[pri:0, instance:test.basics2@e2cbe0]">day1</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="7f6473">  <td>18/08/15 17:10:41</td>   <td>20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.MobileLogin()[pri:0, instance:test.login@be2bc2]">MobileLogin</td> 
+  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="7f6473">  <td>18/08/15 17:10:41</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSigninhome()[pri:0, instance:test.login@be2bc2]">WebSigninhome</td> 
+  <td>main@9976043</td>   <td></td> </tr>
 </table>
