--- a/TestNG/test-output/old/Default suite/classes.html
+++ b/TestNG/test-output/old/Default suite/classes.html
@@ -4,36 +4,18 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>test.login</td>
+<td>test.parameters</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>WebSignouthome</td>
+<td>users</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>WebSigninhome</td>
-<td>Smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>APIRest</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>MobileLogin</td>
-<td>Smoke </td>
-</tr>
 <tr>
 <td>&nbsp;</td>
 <td>Website</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>WebLoginhome</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
