--- a/TestNG/test-output/old/Default suite/methods-alphabetical.html
+++ b/TestNG/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="acb575">  <td>18/08/15 21:06:59</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@8a9f61]">&gt;&gt;Webprerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 21:06:59</td>   <td>72</td> <td title="&lt;&lt;login.prerequisiteaftersuite()[pri:0, instance:test.login@8a9f61]">&lt;&lt;prerequisiteaftersuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/15 21:06:59</td>   <td>-8</td> <td title="&gt;&gt;login.prerequisitebeforesuite()[pri:0, instance:test.login@8a9f61]">&gt;&gt;prerequisitebeforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21699586</td>   <td></td> </tr>
+<tr bgcolor="b58d72">  <td>18/08/16 04:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@f5e5e3]">users</td> 
+  <td>main@4367121</td>   <td></td> </tr>
+<tr bgcolor="b58d72">  <td>18/08/16 04:02:52</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@f5e5e3]">users</td> 
+  <td>main@4367121</td>   <td></td> </tr>
+<tr bgcolor="b58d72">  <td>18/08/16 04:02:52</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@f5e5e3]">users</td> 
+  <td>main@4367121</td>   <td></td> </tr>
 </table>
