--- a/TestNG/test-output/old/Loan project/methods.html
+++ b/TestNG/test-output/old/Loan project/methods.html
@@ -1,50 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Loan project</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>0</td> <td title="&gt;&gt;login.prerequisitebeforesuite()[pri:0, instance:test.login@1fdc050]">&gt;&gt;prerequisitebeforesuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>8</td> <td>&nbsp;</td><td title="&gt;&gt;basics.prerequisite()[pri:0, instance:test.basics@feb3fa]">&gt;&gt;prerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>8</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@be2bc2]">&gt;&gt;Webprerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.beforeclass()[pri:0, instance:test.basics@feb3fa]">&gt;&gt;beforeclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@feb3fa]">&gt;&gt;prerequisitebeforemethod</td> 
-<td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo()[pri:0, instance:test.basics@feb3fa]">Demo</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@feb3fa]">&lt;&lt;prerequisiteaftermethod</td> 
-<td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;basics.prerequisitebeforemethod()[pri:0, instance:test.basics@feb3fa]">&gt;&gt;prerequisitebeforemethod</td> 
-<td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics.Demo1()[pri:0, instance:test.basics@feb3fa]">Demo1</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.prerequisiteaftermethod()[pri:0, instance:test.basics@feb3fa]">&lt;&lt;prerequisiteaftermethod</td> 
-<td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>97</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;basics.afterclass()[pri:0, instance:test.basics@feb3fa]">&lt;&lt;afterclass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@be2bc2]">WebLoginhome</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>18/08/15 21:12:58</td>   <td>116</td> <td>&nbsp;</td><td title="&lt;&lt;basics.postrequisite()[pri:0, instance:test.basics@feb3fa]">&lt;&lt;postrequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/08/15 21:12:58</td>   <td>157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day1()[pri:0, instance:test.basics2@17fd0e6]">day1</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>18/08/15 21:12:58</td>   <td>162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="basics2.day2(java.lang.String)[pri:0, instance:test.basics2@17fd0e6]">day2</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>173</td> <td>&nbsp;</td><td title="&gt;&gt;login.Webprerequisite()[pri:0, instance:test.login@1fdc050]">&gt;&gt;Webprerequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebLoginhome()[pri:0, instance:test.login@1fdc050]">WebLoginhome</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>177</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSignouthome()[pri:0, instance:test.login@1fdc050]">WebSignouthome</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.MobileLogin()[pri:0, instance:test.login@1fdc050]">MobileLogin</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.WebSigninhome()[pri:0, instance:test.login@1fdc050]">WebSigninhome</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>186</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="login.APIRest()[pri:0, instance:test.login@1fdc050]">APIRest</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="ab7c62">  <td>18/08/15 21:12:58</td>   <td>196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.Website(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@93dd95]">Website</td> 
-  <td>main@9976043</td>   <td></td> </tr>
-<tr bgcolor="b5a885">  <td>18/08/15 21:12:58</td>   <td>205</td> <td title="&lt;&lt;login.prerequisiteaftersuite()[pri:0, instance:test.login@1fdc050]">&lt;&lt;prerequisiteaftersuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9976043</td>   <td></td> </tr>
+<tr bgcolor="837a77">  <td>18/08/16 04:02:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.Website(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@100a15d]">Website</td> 
+  <td>main@9865817</td>   <td></td> </tr>
+<tr bgcolor="837a77">  <td>18/08/16 04:02:56</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@100a15d]">users</td> 
+  <td>main@9865817</td>   <td></td> </tr>
+<tr bgcolor="837a77">  <td>18/08/16 04:02:56</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@100a15d]">users</td> 
+  <td>main@9865817</td>   <td></td> </tr>
+<tr bgcolor="837a77">  <td>18/08/16 04:02:56</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="parameters.users(java.lang.String, java.lang.String)[pri:0, instance:test.parameters@100a15d]">users</td> 
+  <td>main@9865817</td>   <td></td> </tr>
 </table>
